# imgui_data_loader

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
docs/: examples.md
examples/: 01_default.py  01_minimal.py  02_buttons_filetypes.py  02_everything.py  02_filetypes.py  03_buttons.py  03_placement.py  03_theme_info.py  04_slots_options.py  04_theme_info.py  05_recent_files.py  05_slots_options.py  06_embedded_app.py  06_recent_files.py  07_custom_store.py  08_embedded_app.py  README.md  custom_dialog.py  dialog_complex.py  dialog_full_example.py  dialog_minimal.py  dialog_themes.py  embedded.py  minimal.py  with_persistence.py
scripts/: capture_docs.py
src/imgui_data_loader/: __init__.py  _assets.py  config.py  dialog.py  persistence.py  runner.py  theme.py  widgets.py
tests/: test_config.py  test_headless_render.py  test_persistence.py  test_theme.py
